services/rsc/metallb/allow-metallb-memberlist.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-metallb-memberlist
spec:
  selector: all() # S'applique à tous les noeuds
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports: [7946]
  - action: Allow
    protocol: UDP
    destination:
      ports: [7946]
  egress:
  - action: Allow
    protocol: TCP
    destination:
      ports: [7946]
  - action: Allow
    protocol: UDP
    destination:
      ports: [7946]
